Add graphql npm pkg

--- a/website/src/pages/docs/getting-started.mdx
+++ b/website/src/pages/docs/getting-started.mdx
@@ -15,7 +15,7 @@ Before you start using Fuse.js, you need to have:
 ## Install the npm packages
 
 ```sh npm2yarn
-npm install --save fuse
+npm install --save fuse graphql
 npm install --save-dev @graphql-typed-document-node/core
 ```
 
