--- a/website/src/pages/docs/getting-started.mdx
+++ b/website/src/pages/docs/getting-started.mdx
@@ -55,7 +55,7 @@ export const GET = handler
 export const POST = handler
 ```
 
-## Add your first type
+### Add your first type
 
 Create a `types` folder at the root of your Next.js app and add a file at `types/User.ts` that contains the following code:
 
@@ -105,3 +105,7 @@ async function getUsers(ids: string[]): Promise<UserResource[]> {
 
 That’s it! Fuse.js will now serve a GraphQL API at `/api/fuse`.
 </Steps>
+
+## Querying your data layer
+
+TODO
