--- a/website/src/pages/docs/getting-started.mdx
+++ b/website/src/pages/docs/getting-started.mdx
@@ -108,4 +108,28 @@ That’s it! Fuse.js will now serve a GraphQL API at `/api/fuse`.
 
 ## Querying your data layer
 
-TODO
+### TODO
+
+### Adding in-line hints and validation
+
+You can use `@0no-co/graphqlsp` to get inline hints while authoring GraphQL documents, you can do so by installing it
+and using the following in your `tsconfig.json`
+
+```json
+{
+  "name": "@0no-co/graphqlsp",
+  "schema": "./schema.graphql",
+  "disableTypegen": true,
+  "templateIsCallExpression": true,
+  "template": "graphql"
+}
+```
+
+When using `.vscode` you will need to use the workspace version of TypeScript, to do so you can easily do that by creating
+`.vscode/settings.json` with the following content
+
+```json
+{
+  "typescript.tsdk": "node_modules/typescript/lib"
+}
+```
