--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -1,6 +1,6 @@
 import { Steps } from 'nextra/components'
 
-# Getting Started with Fuse.js
+# Fuse.js Introduction
 
 Fuse.js is an open-source library for building data layers. Frontend engineers use data layers to translate any number of backend microservices, data stores, & third-party APIs into a GraphQL API that they can consume from their websites, web apps, and mobile apps.
 
