/docs home cleanup

--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -2,9 +2,9 @@ import { Steps } from 'nextra/components'
 
 # Fuse.js Introduction
 
-Fuse.js is an open-source library for building data layers. Frontend engineers use data layers to translate any number of backend microservices, data stores, & third-party APIs into a GraphQL API that they can consume from their websites, web apps, and mobile apps.
+Fuse.js is an open-source library for building [data layers](/docs/data-layers). ([star us on GitHub!](https://github.com/StellateHQ/fuse.js)) It empowers frontend & mobile teams to build and own the central translatation layer from the backend microservices, data stores, & third-party APIs to the optimal GraphQL API for their websites, web apps, and mobile apps.
 
-Fuse.js combines the best tooling from the GraphQL ecosystem to guide you to an organizational and technical “pit of success.” This allows you to spend more time shipping features instead of spending time setting up tooling or fighting your backend engineering roadmap.
+Fuse.js combines the best tooling from the GraphQL ecosystem to guide you to an organizational and technical “pit of success.” While it uses GraphQL (because it is the best technical choice) and familiarity with GraphQL will make for a minimal learning curve, **you do not need to know GraphQL to get started with Fuse.js.**
 
 # Getting Started
 
