--- a/website/src/pages/docs/api/index.mdx
+++ b/website/src/pages/docs/api/index.mdx
@@ -14,6 +14,8 @@ All of Fuse.js is fully type-safe and has TSDoc annotations, so you should be ab
     - id
     - int
     - string
+    - list
+    - connection
     - expose
   - addQueryFields
   - addMutationFields
