--- a/website/src/pages/docs/api/index.mdx
+++ b/website/src/pages/docs/api/index.mdx
@@ -29,4 +29,7 @@ All of Fuse.js is fully type-safe and has TSDoc annotations, so you should be ab
   - React client components (`fuse/next/client`)
   - React server components (`fuse/next/server`)
   - API Route (`fuse/next`)
+    - createAPIRouteHandler
+    - createPagesRouteHandler
   - Plugin (`fuse/next/plugin`)
+    - nextFusePlugin
