--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -66,7 +66,7 @@ export const POST = handler
   If you are using Next.js's Pages Router, replace <code>createAPIRouteHandler</code> with <code>createPagesRouteHandler</code> instead.
 </Callout>
 
-That’s it! Fuse.js will now serve a GraphQL API at `/api/fuse` and automatically generated a GraphQL query for `user(id: ID!)`.
+That’s it! Fuse.js will now serve a GraphQL API at `/api/fuse`.
 
 </Steps>
 
