--- a/website/src/components/snippets/node.mdx
+++ b/website/src/components/snippets/node.mdx
@@ -1,31 +1,18 @@
 ```ts
-import { node } from 'fuse'
-import { UserNode } from './User'
+// /types/BlogPost.ts
 
-type BlogPostSource = {
-  id: string
-  title: string
-  content_html: string
-  author_id: string
-}
-
-// "Nodes" are the core abstraction of Fuse.js. Each node represents
-// a resource/entity with multiple fields and has to define two things:
-// 1. load(): How to fetch from the underlying data source
-// 2. fields: What fields should be exposed and added for clients
+// Turn blog posts from your CMS into a GraphQL API
 export const BlogPostNode = node<BlogPostSource>({
   name: 'BlogPost',
-  load: async (ids) => getBlogPosts(ids),
+  load: async (ids) => fetchBlogPosts(ids),
   fields: (t) => ({
     // Exose a field as-is
     title: t.exposeString('title'),
     // Rename a field
     content: t.exposeString('content_html'),
-    // Connect it to another node
+    // Connect it to other data
     author: t.field({
       type: UserNode,
-      // The BlogPostNode doesn't have to know how to load a user because
-      // the UserNode defines a load() function
       resolve: (blogPost) => blogPost.author_id
     })
   }),
