Add docs scaffolding

--- a/website/src/pages/docs/api/index.mdx
+++ b/website/src/pages/docs/api/index.mdx
@@ -19,7 +19,7 @@ All of Fuse.js is fully type-safe and has TSDoc annotations, so you should be ab
     - expose
   - addQueryFields
   - addMutationFields
-  - object
+  - objectType
     - addObjectFields
   - inputType
   - enumType
