--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -1,6 +1,6 @@
-# Best practices
+# Client
 
-We'll touch on some best practices while you are using `fuse` to build your application.
+TODO In-depth guide on client data fetching
 
 ## Co-locate your fragments
 
