--- a/website/src/pages/docs/basics/nodes.mdx
+++ b/website/src/pages/docs/basics/nodes.mdx
@@ -73,6 +73,16 @@ query {
 }
 ```
 
+## Connecting nodes
+
+### Referencing other nodes
+
+TODO t.field({ type: OtherNode }), how it works and when to use it
+
+### Extending nodes
+
+TODO How and when to addNodeFields
+
 ## How to handle authorization
 
 Authorization can be hard to reason about in these cases, this is why
