Fix syntax error

--- a/website/src/pages/docs/basics/nodes.mdx
+++ b/website/src/pages/docs/basics/nodes.mdx
@@ -77,7 +77,7 @@ query {
 
 ### Referencing other nodes
 
-TODO t.field({ type: OtherNode }), how it works and when to use it
+TODO `t.field({ type: OtherNode })`, how it works and when to use it
 
 ### Extending nodes
 
