--- a/website/src/components/snippets/client.mdx
+++ b/website/src/components/snippets/client.mdx
@@ -20,7 +20,7 @@ export const BlogPost = (props: {
 
   return (
     <div>
-      {/* Fully type-safe, component-level data fetching */}
+      {/* Fully typesafe, component-level data fetching */}
       <UserCard user={blogPost.author} />
       <h1>{blogPost.title}</h1>
       <RichText>{blogPost.content}</RichText>
