--- a/website/src/pages/docs/api/index.mdx
+++ b/website/src/pages/docs/api/index.mdx
@@ -1,6 +1,6 @@
 # Fuse.js API Reference
 
-All of Fuse.js is fully type-safe and has TSDoc annotations, so you should be able to rely on your IDE's autocomplete to discover methods most of the time. Since most of the API is based on the previously existing Pothos and urql libraries, GitHub copilot also works well:
+All of Fuse.js is fully typesafe and has TSDoc annotations, so you should be able to rely on your IDE's autocomplete to discover methods most of the time. Since most of the API is based on the previously existing Pothos and urql libraries, GitHub copilot also works well:
 
 ![Visual Studio Code autocomplete for t.expose methods](https://gist.github.com/assets/7525670/4470f1d9-cdfc-4424-b18e-504c04836df2)
 
