--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -9,7 +9,7 @@ this way when you need more data for your component you know exactly where to ad
 you don't have to go up your component-tree to find the `query` responsible for adding the data.
 
 ```tsx
-import { FragmentType, graphql, useFragment } from '@/gql'
+import { FragmentType, graphql, useFragment } from '@/fuse'
 import styles from './Avatar.module.css'
 
 const UserFields = graphql(`
