--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -145,7 +145,7 @@ In doing so we register a client with `React.cache` that can be re-used across
 server-components.
 
 ```tsx
-import { graphql } from '@/gql'
+import { graphql } from '@/fuse'
 
 const UserQuery = graphql(`
   query User($id: ID!) {
