--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -189,7 +189,7 @@ and trust that the query is updated automatically and our data is passed into th
 ### Adding in-line hints and validation
 
 You can use `@0no-co/graphqlsp` to get inline hints while authoring GraphQL documents, you can do so by installing it
-and using the following in your `tsconfig.json`
+with `npm i --save-dev @0no-co/graphqlsp` and using the following in your `tsconfig.json`:
 
 ```json
 {
